# storage/api-docs/api-docs.json
@@ -105,12 +105,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
+                        "description": "Successful operation"
                     },
                     "400": {
                         "description": "Bad Request"
@@ -118,15 +113,20 @@
                     "403": {
                         "description": "Forbidden"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/login": {
             "post": {
                 "tags": [
-                    "Authentication "
+                    "Authorization"
                 ],
-                "summary": "Authentication",
+                "summary": "Authorization",
                 "description": "Login to use API",
                 "operationId": "login",
                 "requestBody": {
@@ -135,43 +135,14 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "phone",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "phone": {
-                                        "type": "string",
-                                        "example": "380123456789"
-                                    },
-                                    "password": {
-                                        "type": "string",
-                                        "format": "password",
-                                        "example": "password"
-                                    }
-                                },
-                                "type": "object"
+                                "$ref": "#/components/schemas/Request"
                             }
                         }
                     }
                 },
                 "responses": {
-                    "201": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
+                    "200": {
+                        "description": "Ok"
                     }
                 }
             }
@@ -310,6 +281,27 @@
         }
     },
     "components": {
+        "schemas": {
+            "Request": {
+                "title": "Request",
+                "description": "Store Project request body data",
+                "properties": {
+                    "phone": {
+                        "title": "phone",
+                        "description": "Name of the new project",
+                        "type": "string",
+                        "example": "380123456789"
+                    },
+                    "password": {
+                        "title": "password",
+                        "description": "Description of the new project",
+                        "type": "string",
+                        "example": "password"
+                    }
+                },
+                "type": "object"
+            }
+        },
         "securitySchemes": {
             "bearerAuth": {
                 "type": "http",
@@ -317,6 +309,20 @@
             }
         }
     },
+    "tags": [
+        {
+            "name": "Authorization"
+        },
+        {
+            "name": "Category"
+        },
+        {
+            "name": "Product"
+        },
+        {
+            "name": "Cart"
+        }
+    ],
     "security": [
         []
     ]
